<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <EditText
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditText" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="131dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="43dp" android:layout_marginStart="43dp" android:layout_marginEnd="43dp"
            android:layout_marginRight="43dp" app:layout_constraintEnd_toEndOf="parent" android:autofillHints=""
            android:hint="@string/password"/>
    <EditText
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/loginEditText"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="43dp" android:layout_marginStart="43dp" android:layout_marginEnd="43dp"
            android:layout_marginRight="43dp" app:layout_constraintEnd_toEndOf="parent" android:hint="@string/login"/>
    <Button
            android:text="@string/loginButton"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:id="@+id/loginButton" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="236dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="43dp" android:layout_marginStart="43dp" android:layout_marginEnd="43dp"
            android:layout_marginRight="43dp" app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>