<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/strzelam"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:id="@+id/fireButton" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="126dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="156dp" android:layout_marginStart="156dp" android:onClick="fire"
            android:layout_marginEnd="156dp" android:layout_marginRight="156dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/nowa_gra"
            android:layout_height="50dp"
            android:id="@+id/newGameButton"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="188dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="157dp"
            android:layout_marginStart="157dp" android:onClick="newGame" android:layout_marginEnd="157dp"
            android:layout_marginRight="157dp" app:layout_constraintEnd_toEndOf="parent" android:layout_width="325dp"/>
    <TextView
            android:layout_width="325dp"
            android:layout_height="17dp"
            android:id="@+id/resultInfo"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="257dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="128dp"
            android:layout_marginStart="128dp" android:layout_marginEnd="129dp" android:layout_marginRight="129dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:id="@+id/gameInfo" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="120dp" android:layout_marginStart="120dp" android:layout_marginEnd="121dp"
            android:layout_marginRight="121dp" app:layout_constraintEnd_toEndOf="parent" android:gravity="center"/>
    <EditText
            android:layout_width="325dp"
            android:layout_height="45dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/numberInput"
            app:layout_constrainedWidth="false"
            android:gravity="center" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="56dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/wyniki"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:id="@+id/resultsButton" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="291dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="43dp" android:layout_marginStart="43dp" android:onClick="showResultBoard"
            android:layout_marginEnd="43dp" android:layout_marginRight="43dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/wyloguj"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:id="@+id/signOutButton"
            android:onClick="signOut"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="555dp" android:layout_marginEnd="43dp" android:layout_marginRight="43dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="43dp" android:layout_marginStart="43dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="126dp"/>
</android.support.constraint.ConstraintLayout>